--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ autobahn = "^23.6.2"
 service-identity = "^23.1.0"
 pyrogram = "^2.0.106"
 aiohttp = "^3.9.1"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
