--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,25 @@
-okx_okx_url_trade = https://www.okx.com/ru/trade-spot
+okx_api_key =
+okx_api_secret =
+okx_api_passphrase =
+okx_url_trade = https://www.okx.com/ru/trade-spot
 
-activity_level = 4
-limit_funds = 5
-ma_period = 20
-limit_count_trades = 3
-profit_levels = 30, 50, 100
+activity_level = 5
 
-tg_session_name = TradeApp
+enable_trading = False
+limit_funds = 10
+limit_count_trades = 5
+fee = 0.001
+buy_half_level = 0.55
+close_high_level = 0.9
+
+first_loss_zone = 0.5
+second_loss_zone = 0.0
+critical_loss_zone = -0.25
+
+first_loss_time = 30000
+second_loss_time = 12000
+critical_loss_time = 10
+
+tg_session_name = ServerApp
 tg_signal_channel_id = -1002074047213
 tg_log_channel_id = -1002090278893
